Versão 1.0.1 sem erros

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
+        supportLibVersion = "28.0.2"
     }
     repositories {
         google()
@@ -35,6 +36,16 @@ allprojects {
         jcenter()
         maven { url 'https://www.jitpack.io' }
     }
+}
+subprojects {
+  project.configurations.all {
+    resolutionStrategy.eachDependency { details ->
+      if (details.requested.group == 'com.android.support'
+          && !details.requested.name.contains('multidex') ) {
+        details.useVersion "27.0.1"
+      }
+    }
+  }
 }
 
 
