--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
-    "moment": "2.24.0",
     "expo": "~39.0.2",
+    "expo-barcode-scanner": "~9.0.0",
+    "expo-permissions": "~9.3.0",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.2",
+    "moment": "2.24.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
-    "react-native-gesture-handler": "~1.7.0",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.10.1",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
